--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="text-bg">
               <span>Welcome To </span>
                       <h1>HERB SEEK</h1>
-                      <p>THIS IS PROJECT ON IDENTIFICATION OF DIFFERENT MEDICINAL PLANTS/RAW METERIALS THROUGH IMAGE PROCESSING USING MACHINE LEARNING ALGORITHM 
+                      <p>THIS IS PROJECT ON IDENTIFICATION OF DIFFERENT MEDICINAL PLANTS/RAW MATERIALS THROUGH IMAGE PROCESSING USING MACHINE LEARNING ALGORITHM 
                       </p>
             </div>
           </div>
